@@ -1,3 +1,12 @@
+2008-05-09 Gerrit Renker <grenker@users.sourceforge.net>
+
+* replace costly gettimeofday() with nanonsleep() See:
+https://sourceforge.net/tracker/index.php?func=detail&aid=1940009&group_id=128336&atid=711373
+
+2008-05-09 Jon Dugan <jdugan@x1024.net>
+
+* change currLen to unsigned to squelch warning generated by Nathan's patch
+
 2008-05-09 Nathan Jones <nmjones@users.sourceforge.net>
 
 * prevent underflow when the amount of data to be transmitted (-n) is not a
